--- a/mystyles4.css
+++ b/mystyles4.css
@@ -8,7 +8,7 @@ h1 {
 	font: bold 20px verdana,sans-serif; /* начертание, размер и семейство шр */
 }
 h2 {
-	font: bold 14px verdana, sans-serif
+	font: bold 14px verdana, sans-serif;
 }
 /* Описание блочных элементов */
 header,section,footer,aside,nav,article,figure,figcaption,hgroup
@@ -71,7 +71,7 @@ article {
 	background: #FFFBCC;
 	border: 1px solid #999999;
 	padding: 20px;
-	margin-bottom: 15px; /*нижнее внутреннее поле */
+	margin-bottom: 15px; /*нижнее внутреннее поле(забивка) */
 }
 article footer {
 	text-align: right;
